--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "link it"
     ],
     "support": {
-        "docs": "https://github.com/bighoho123/link-it/blob/master/README.md",
-        "issues": "https://github.com/bighoho123/link-it/issues"
+        "docs": "https://github.com/simple-integrated-marketing/link-it",
+        "issues": "https://github.com/simple-integrated-marketing/link-it/issues"
     },
     "license": "MIT",
     "authors": [
